# Sitios-historicos

./: README.md
admin/: .gitignore  docker-compose.yml  package-lock.json  pyproject.toml
admin/docker-entrypoint-initdb.d/: init.sql
admin/src/core/: __init__.py  associations.py  database.py  seeds.py
admin/src/core/auth/: __init__.py  models.py  repository.py  validators.py
admin/src/core/feature_flags/: models.py  repository.py
admin/src/core/historic_site/: __init__.py  models.py  repository.py
admin/src/core/reviews/: __init__.py  models.py  repository.py
admin/src/core/tags/: models.py  repository.py
admin/src/web/: __init__.py  config.py  storage.py
admin/src/web/api/: auth_google.py  routes.py
admin/src/web/controllers/: __init__.py  auth.py  feature_flags.py  historic_site.py  reviews.py  tags.py  users.py
admin/src/web/handlers/: error.py
admin/src/web/templates/: error.html  home.html  layout.html
admin/src/web/templates/auth/: login.html
admin/src/web/templates/feature_flags/: feature_flags.html  maintenance.html
admin/src/web/templates/historic_site/: create.html  list.html  list_modifications.html  update.html
admin/src/web/templates/reviews/: list_reviews.html  view_review.html
admin/src/web/templates/tags/: create_tag.html  list_tags.html  update_tag.html
admin/src/web/templates/users/: create.html  list.html  update.html  view_detail.html
admin/static/: error.css
admin/tests/api/: conftest.py  test_auth.py  test_favorites.py  test_reviews.py  test_sites.py  test_user.py
calculator/: .gitignore  main.py
calculator/src/: calculator.py  operations.py
portal/: index.html  package-lock.json  package.json  vite.config.js
portal/src/: App.vue  main.js
portal/src/assets/: main.css
portal/src/components/: AppHeader.vue  ChipButton.vue  GoogleSignInButton.vue  SearchSection.vue  SiteCard.vue  SiteCardSkeleton.vue  SiteCarousel.vue  SiteImageCarousel.vue  SiteImageCarouselSkeleton.vue  SiteLocationMap.vue  Stars.vue  TitleSkeleton.vue  (+2 more)
(+16 files in other folders)
